check on current comic to be valid

don't crash on invalid config groups when asked.
also, disable the context menu options when no valid comic is loaded

BUG:373031